--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "eralchemy2"
-version = "1.3.8"
+version = "1.3.9"
 description = "Simple entity relation (ER) diagrams generation"
-authors = ["Florian Maurer <fmaurer@disroot.org>"]
+authors = ["Florian Maurer <fmaurer@disroot.org>","Spiros Vathis <spiros.vathis@cloud.com>"]
 license = "Apache License 2.0"
 readme = "README.md"
 
